<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
	
	<!-- 日期和时间显示区 -->
    <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView android:id="@+id/dateDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_widgets_example_dateDisplay_text"/>
    </LinearLayout>

	<!-- 按钮一，点击弹出日期选择对话框 -->
    <Button android:id="@+id/pickDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_widgets_example_pickDate_text"/>
            
	<!-- 按钮二，点击弹出时间选择对话框 -->
    <Button android:id="@+id/pickTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_widgets_example_pickTime_text"/>

</LinearLayout>
